[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/icons/right_arrow_2.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/left_arrow_2.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/left_arrow_0.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/right_arrow_1.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/left_arrow_1.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/right_arrow_0.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/star_selection_3.png" type="Texture" id=7]
[ext_resource path="res://src/menu/stage_prelude_menu/ConditionsIndicator.gd" type="Script" id=8]
[ext_resource path="res://src/menu/stage_prelude_menu/ParametersInfo.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/8bitOperatorPlus8-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 2
font_data = SubResource( 3 )

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 3
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 2 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 3
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 1 )
frame_2/delay_sec = 0.0

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 2
font_data = SubResource( 3 )

[node name="ConditionsIndicatorControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.6
script = ExtResource( 8 )

[node name="RequirementsContainerControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5

[node name="ColorRect" type="ColorRect" parent="RequirementsContainerControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="RequirementsLabel" type="Label" parent="RequirementsContainerControl"]
anchor_right = 1.0
anchor_bottom = 0.15
margin_bottom = 0.6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Requirements :"
align = 1
valign = 1

[node name="StarsChooserControl" type="Control" parent="RequirementsContainerControl"]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.3

[node name="StarsLeftTextureButton" type="TextureButton" parent="RequirementsContainerControl/StarsChooserControl"]
anchor_right = 0.25
anchor_bottom = 1.0
texture_normal = SubResource( 1 )
expand = true
stretch_mode = 5

[node name="StarsRightTextureButton" type="TextureButton" parent="RequirementsContainerControl/StarsChooserControl"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="SelectedStarsTextureButton" type="TextureButton" parent="RequirementsContainerControl/StarsChooserControl"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="RequirementsParametersInfoControl" parent="RequirementsContainerControl" instance=ExtResource( 9 )]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LoseConditionsContainerControl" type="Control" parent="."]
anchor_top = 0.57
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="LoseConditionsContainerControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="GameOverLabel" type="Label" parent="LoseConditionsContainerControl"]
anchor_right = 1.0
anchor_bottom = 0.186
margin_bottom = 0.6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Game over if :"
align = 1
valign = 1

[node name="GameOverParametersInfoControl" parent="LoseConditionsContainerControl" instance=ExtResource( 9 )]
anchor_top = 0.186
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="pressed" from="RequirementsContainerControl/StarsChooserControl/StarsLeftTextureButton" to="." method="_on_StarsLeftTextureButton_pressed"]
[connection signal="pressed" from="RequirementsContainerControl/StarsChooserControl/StarsRightTextureButton" to="." method="_on_StarsRightTextureButton_pressed"]
